--- a/Windows Uomi App/Languages/Translations.el-GR.resx
+++ b/Windows Uomi App/Languages/Translations.el-GR.resx
@@ -309,4 +309,7 @@
   <data name="mnuItemExport2Json_text" xml:space="preserve">
     <value>Εξαγωγή σε αρχείο .json</value>
   </data>
+  <data name="frmAbout_Caption" xml:space="preserve">
+    <value>Σχετικά</value>
+  </data>
 </root>
