--- a/Windows Uomi App/Languages/Translations.en-UK.resx
+++ b/Windows Uomi App/Languages/Translations.en-UK.resx
@@ -309,4 +309,7 @@
   <data name="mnuItemExport2Json_text" xml:space="preserve">
     <value>Export to .json file</value>
   </data>
+  <data name="frmAbout_Caption" xml:space="preserve">
+    <value>About</value>
+  </data>
 </root>
